@@ -1,3 +1,4 @@
+* #2960: Gray bottom border for Toolbox. (marco)
 * #2164: Keybindings for buttons in intro sequence (erikos)
 
 Snapshot 0ad6398cf1
